# codegen2

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: function.rs  lib.rs  struct.rs
tests/: codegen.rs
