[package]
name = "codegen2"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.4"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>", "Greg \"GothAck\" Miell <rust@greg.gothack.ninja>"]
description = "Library for generating Rust code"
documentation = "https://docs.rs/codegen2/0.1.4/codegen2"
homepage = "https://github.com/GothAck/codegen2"
repository = "https://github.com/GothAck/codegen2"
readme = "README.md"
edition = "2018"

[dependencies]
indexmap = "1.0.2"
